--- a/vote_api/Dockerfile
+++ b/vote_api/Dockerfile
@@ -11,4 +11,4 @@ COPY . /vote_api
 RUN python -m pip install --upgrade pip
 RUN pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host=files.pythonhosted.org --no-cache-dir -r requirements.txt
 
-CMD python main.py
+CMD cd .. && python -m vote_api
