--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,22 +22,22 @@ services:
 
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
+    network_mode: host
     environment:
       ZOOKEEPER_CLIENT_PORT: 32181
       ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - "32181:32181"
+    extra_hosts:
+      - "moby:127.0.0.1"
 
   kafka:
     image: confluentinc/cp-kafka:latest
+    network_mode: host
     depends_on:
-      - zookeeper
-    links:
       - zookeeper
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: localhost:32181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:29092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    ports:
-      - "29092:29092"
+    extra_hosts:
+      - "moby:127.0.0.1"
